Add some image details

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -45,6 +45,7 @@
                     physicalCover: 
                     {
                         imgSrc: "../img/content/discography/ThrillOfTheFeel.jpg",
+                        backgrounds: [ { title: "Closest: Sozaijiten Vol.5 Sky, SE037", link: "http://www.sozaijiten.com/cdrom/imagedetail.asp?pid=6&fid=99005037&i=36"}],
                         fonts: [ { title: "Impact", link: "https://www.dafontfree.io/impact-font/"}]
                     },
                     physicalBack:
@@ -79,9 +80,7 @@
                     },
                     physicalTray:
                     {
-                        imgSrc: "../img/content/discography/physical/SSS/Tray.jpg",
-                        backgrounds: [ { title: "A Test Background", link: "#abc"}],
-                        fonts: [ { title: "A Test Font", link: "#def"}]
+                        imgSrc: "../img/Placeholder.png"
                     },
                     bookletPageSourcePrefix: '../img/content/discography/physical/Thrill/',
                     bookletPageSourceExtension: '.jpg',
@@ -139,14 +138,19 @@
                     {
                         imgSrc: "../img/content/discography/physical/Crush40/Tray.jpg",
                         backgrounds: [ { title: "A Test Background", link: "#abc"}],
-                        fonts: [ { title: "A Test Font", link: "#def"}]
+                        fonts: [ { title: "A Test Font", link: "#def"} ]
                     },
                     bookletPageSourcePrefix: '../img/content/discography/physical/Crush40/',
                     bookletPageSourceExtension: '.jpg',
                     bookletPages:
                     [
                         {},
-                        {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}
+                        {}, {}, 
+                        { backgrounds: [ { title: "At the studio, by T.Wada", link: "https://www.facebook.com/photo/?fbid=10150142308379571&set=pb.100050187742440.-2207520000.."}] }, 
+                        {}, 
+                        { backgrounds: [ { title: "At the studio", link: "https://www.facebook.com/photo/?fbid=10150126186484571&set=pb.100050187742440.-2207520000.."}] },
+                        {}, {}, {}, {}, {}, 
+                        { backgrounds: [ { title: "At the studio", link: "https://www.facebook.com/photo/?fbid=10150126186484571&set=pb.100050187742440.-2207520000.."}] }
                     ]
                 },
                 sss: {
@@ -186,7 +190,9 @@
                     discImg: "../img/content/discography/physical/SSS/CD.png",
                     physicalCover: 
                     {
-                        imgSrc: "../img/content/discography/SuperSonicSongs.png"
+                        imgSrc: "../img/content/discography/SuperSonicSongs.png",
+                        backgrounds: [ { title: "Sozaijiten Vol. 8 Walls, SH050", link: "http://www.sozaijiten.com/cdrom/imagedetail.asp?pid=9&fid=99008050&i=49"}],
+                        fonts: [ { title: "Bronzo", link: "https://fontsgeek.com/bronzo-font" }]
                     },
                     obiFront:
                     {
@@ -203,17 +209,20 @@
                     },
                     physicalBack:
                     {
-                        imgSrc: "../img/content/discography/physical/SSS/Back.jpg"
+                        imgSrc: "../img/content/discography/physical/SSS/Back.jpg",
+                        backgrounds: [ { title: "Image from TGS 2008", link: "https://www.facebook.com/photo/?fbid=30160854570&set=pb.100050187742440.-2207520000.."}],
                     },
                     physicalTray:
                     {
-                        imgSrc: "../img/content/discography/physical/SSS/Tray.jpg"
+                        imgSrc: "../img/content/discography/physical/SSS/Tray.jpg",
+                        backgrounds: [ { title: "Sozaijiten Vol. 8 Walls, SH050", link: "http://www.sozaijiten.com/cdrom/imagedetail.asp?pid=9&fid=99008050&i=49"}],
                     },
                     bookletPageSourcePrefix: '../img/content/discography/physical/SSS/',
                     bookletPageSourceExtension: '.jpg',
                     bookletPages:
                     [
-                        {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}
+                        {backgrounds: { title: "Sozaijiten Vol. 8 Walls, SH050", link: "http://www.sozaijiten.com/cdrom/imagedetail.asp?pid=9&fid=99008050&i=49"}}, 
+                        {}, { }, {}, {}, {}, {}, {}, {}, {}, {}, {}
                     ]
                 },
                 riseagain: {
@@ -236,7 +245,8 @@
                     discImg: "../img/content/discography/physical/RiseAgain/Disc.png",
                     physicalCover: 
                     {
-                        imgSrc: "../img/content/discography/RiseAgain.jpg"
+                        imgSrc: "../img/content/discography/RiseAgain.jpg",
+                        fonts: [ { title: "Downcome", link: "https://www.dafont.com/es/downcome.font" } ]
                     },
                     obiFront:
                     {
@@ -253,67 +263,22 @@
                     },
                     physicalBack:
                     {
-                        imgSrc: "../img/content/discography/physical/RiseAgain/Back.jpg"
+                        imgSrc: "../img/content/discography/physical/RiseAgain/Back.jpg",
+                        fonts: [ { title: "Downcome", link: "https://www.dafont.com/es/downcome.font" } ]
                     },
                     physicalTray:
                     {
-                        imgSrc: "../img/content/discography/physical/RiseAgain/Tray.jpg"
+                        imgSrc: "../img/content/discography/physical/RiseAgain/Tray.jpg",
+                        fonts: [ { title: "Downcome", link: "https://www.dafont.com/es/downcome.font" } ]
                     },
                     bookletPageSourcePrefix: '../img/content/discography/physical/RiseAgain/',
                     bookletPageSourceExtension: '.jpg',
                     bookletPages:
                     [
-                        {}, {}, {}, {}
-                    ]
-                },
-                riseagain: {
-                    title: "Rise Again",
-                    description: `
-                    <p>Rise Again is a compilation of the four singles released by Crush 40 throughout 2011 and 2012: "Song of Hope", "Sonic Youth", "One Of Those Days", "Rise Again".</p>
-                    <p>The singles are featured on this EP in the order they were released - with "Song of Hope" being the first to "Rise Again" being the last to be released.</p>
-                    <p>There was a variant of this CD created for Sonic Boom 2012, unofficially known as the <i>Sonic Boom 2012 Promotional EP</i>. This release is the same as the full EP, but excludes the 2011 single "Song of Hope", instead opting to only include the other three singles, released in 2012.</p>
-                    `,
-                    releaseYear: 2012,
-                    playbackLength: "17:56",
-                    tracks:
-                    [
-                        { title: "Sonic Youth", playbackLength: "3:49", tags: [ 'rerelease' ] },
-                        { title: "One Of Those Days", playbackLength: "4:31", tags: [ 'rerelease' ] },
-                        { title: "Song Of Hope", playbackLength: "5:11", tags: [ 'rerelease' ], description: "Not featured in the <i>Sonic Boom 2012 Promotional EP</i>." },
-                        { title: "Rise Again", playbackLength: "4:26", tags: [ 'rerelease' ] }
-                    ],
-                    physicalBg: "../img/visuals/Background/Discography/RiseAgain.png",
-                    discImg: "../img/content/discography/physical/RiseAgain/Disc.png",
-                    physicalCover: 
-                    {
-                        imgSrc: "../img/content/discography/RiseAgain.jpg"
-                    },
-                    obiFront:
-                    {
-                        imgSrc: "../img/content/discography/physical/RiseAgain/Obi.jpg",
-                        rightTranslation: `
-                            <p><i>To be filled in</i></p>
-                        `,
-                        middleTranslation: `
-                            <p><i>To be filled in</i></p>
-                        `,
-                        leftTranslation: `
-                            <p><i>To be filled in</i></p>
-                        `
-                    },
-                    physicalBack:
-                    {
-                        imgSrc: "../img/content/discography/physical/RiseAgain/Back.jpg"
-                    },
-                    physicalTray:
-                    {
-                        imgSrc: "../img/content/discography/physical/RiseAgain/Tray.jpg"
-                    },
-                    bookletPageSourcePrefix: '../img/content/discography/physical/RiseAgain/',
-                    bookletPageSourceExtension: '.jpg',
-                    bookletPages:
-                    [
-                        {}, {}, {}, {}
+                        { fonts: [ { title: "Downcome", link: "https://www.dafont.com/es/downcome.font" } ] }, 
+                        { fonts: [ { title: "Downcome", link: "https://www.dafont.com/es/downcome.font" } ] }, 
+                        { fonts: [ { title: "Downcome", link: "https://www.dafont.com/es/downcome.font" } ] }, 
+                        { fonts: [ { title: "Downcome", link: "https://www.dafont.com/es/downcome.font" } ] }
                     ]
                 }
             }
