Add "Live!" details

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -184,7 +184,7 @@
                         { title: "Is It You", playbackLength: "4:58", tags: [ 'original', 'first' ] },
                         { title: "Free", playbackLength: "3:22", tags: ['rerelease'], description: "Bonus track on digital releases." },
                         { title: "With Me -Massive Power Mix-", playbackLength: "3:55", tags: ['rerelease'], description: "Bonus track on digital releases." },
-                        { title: "Seven Rings In Hand", playbackLength: "4:49", tags: ['rerelease'], description: "Bonus track on digital releases." },
+                        { title: "Seven Rings In Hand", playbackLength: "4:49", tags: [ 'cover', 'rerelease'], description: "Bonus track on digital releases." },
                     ],
                     physicalBg: "../img/visuals/Background/Discography/SSSBackground.png",
                     discImg: "../img/content/discography/physical/SSS/CD.png",
@@ -279,6 +279,86 @@
                         { fonts: [ { title: "Downcome", link: "https://www.dafont.com/es/downcome.font" } ] }, 
                         { fonts: [ { title: "Downcome", link: "https://www.dafont.com/es/downcome.font" } ] }, 
                         { fonts: [ { title: "Downcome", link: "https://www.dafont.com/es/downcome.font" } ] }
+                    ]
+                },
+                live: {
+                    title: "LIVE!",
+                    description: `
+                    <p><i>Live!</i> is Crush 40's first live album. Crush 40 performed two gigs at Live Stage Guilty in Tokyo, Japan on March 29th, 2012, and March 30th, 2012, and both shows were professionally recorded in full for this album.</p>
+                    <p>This was the very first time Crush 40 could be heard with a full band live outside of Japan, and all 24 songs performed at these shows were released, with the exception of a cover of Hardline's "Everything", which has not yet been released due to copyright concerns.</p>
+                    <p>Find out more about the contents of this CD and its recording process on the dedicated show page.</p>
+                    `,
+                    releaseYear: 2012,
+                    playbackLength: "1:26:24*",
+                    tracks:
+                    [
+                        { title: "Sonic Youth", playbackLength: "3:56", tags: [ 'live' ] },
+                        { title: "Free", playbackLength: "3:33", tags: [ 'live' ] },
+                        { title: "His World", playbackLength: "3:21", tags: [ 'live' ] },
+                        { title: "Sonic Heroes", playbackLength: "1:51", tags: [ 'live' ] },
+                        { title: "Open Your Heart", playbackLength: "3:54", tags: [ 'live' ] },
+                        { title: "Un-Gravitify", playbackLength: "2:36", tags: [ 'cover', 'live' ], description: "Only available on <b>digital</b> releases." },
+                        { title: "Seven Rings In Hand", playbackLength: "2:15", tags: [ 'live' ], description: "Only available on <b>digital</b> releases." },
+                        { title: "Fight The Knight", playbackLength: "2:31", tags: [ 'live' ], description: "Only available on <b>digital</b> releases." },
+                        { title: "Knight Of The Wind", playbackLength: "4:30*", tags: [ 'live' ], description: "*One second longer on CD due to different transition" },
+                        { title: "Song Of Hope", playbackLength: "5:09", tags: [ 'live' ], description: "Only available on <b>digital</b> releases." },
+                        { title: "I Am... All Of Me", playbackLength: "4:30", tags: [ 'live' ] },
+                        { title: "With Me", playbackLength: "2:37", tags: [ 'live' ] },
+                        { title: "Never Turn Back", playbackLength: "4:40*", tags: [ 'live' ], description: "*4 seconds longer on CD to include Johnny's Japanese \"Everyone's the best!\" (minna saikou!) leading up to Fire Woman" },
+                        { title: "Fire Woman", playbackLength: "5:21", tags: [ 'cover', 'live' ], description: "Only available on <b>CD</b> due to copyright concerns." },
+                        { title: "Revvin' Up", playbackLength: "3:20", tags: [ 'live' ] },
+                        { title: "Watch Me Fly...", playbackLength: "5:27", tags: [ 'live' ] },
+                        { title: "Into The Wind", playbackLength: "3:25", tags: [ 'live' ] },
+                        { title: "Rise Again", playbackLength: "4:24", tags: [ 'live' ] },
+                        { title: "Sonic Boom", playbackLength: "2:36", tags: [ 'live' ] },
+                        { title: "All Hail Shadow", playbackLength: "2:16", tags: [ 'live' ] },
+                        { title: "Live & Learn", playbackLength: "5:01", tags: [ 'live' ] },
+                        { title: "One Of Those Days", playbackLength: "4:32", tags: [ 'live' ] },
+                        { title: "What I'm Made Of...", playbackLength: "4:21", tags: [ 'live' ] },
+                    ],
+                    physicalBg: "../img/visuals/Background/Discography/LiveStuff.png",
+                    discImg: "../img/content/discography/physical/Live/Disc.png",
+                    physicalCover: 
+                    {
+                        imgSrc: "../img/content/discography/LIVE!.png",
+                        backgrounds: [ 
+                            { title: "WaveMaster Inc. Photo", link: "https://www.inside-games.jp/article/img/2014/02/07/74153/455912.html" },
+                            { title: "WaveMaster Inc. Photo", link: "https://www.inside-games.jp/article/img/2014/02/07/74153/455907.html" } 
+                        ],
+                        fonts: [ { title: "Stencil", link: "https://fonts.adobe.com/fonts/stencil#fonts-section" } ]
+                    },
+                    obiFront:
+                    {
+                        imgSrc: "../img/content/discography/physical/Live/Obi.jpg",
+                        rightTranslation: `
+                            <p><i>Crush 40 Live!</i></p>
+                        `,
+                        middleTranslation: `
+                            <p><i>Crush 40 Live!</i></p>
+                        `,
+                        leftTranslation: `
+                            <p><i>CD tracklisting</i></p>
+                        `
+                    },
+                    physicalBack:
+                    {
+                        imgSrc: "../img/content/discography/physical/Live/Back.jpg",
+                        backgrounds: [ { title: "WaveMaster Inc. Photo", link: "https://www.inside-games.jp/article/img/2014/02/07/74153/455913.html" } ]
+                    },
+                    physicalTray:
+                    {
+                        imgSrc: "../img/content/discography/physical/Live/Tray.jpg"
+                    },
+                    bookletPageSourcePrefix: '../img/content/discography/physical/Live/',
+                    bookletPageSourceExtension: '.jpg',
+                    bookletPages:
+                    [
+                        { },
+                        {}, {}, {}, {}, {}, 
+                        { backgrounds: [ { title: "WaveMaster Inc. Photo", link: "https://www.inside-games.jp/article/img/2014/02/07/74153/455912.html" } ] },
+                        {}, {}, {}, {}, {}, {}, 
+                        { backgrounds: [ { title: "WaveMaster Inc. Photo", link: "https://www.inside-games.jp/article/img/2014/02/07/74153/455908.html" } ] }, 
+                        { backgrounds: [ { title: "WaveMaster Inc. Photo", link: "https://www.inside-games.jp/article/img/2014/02/07/74153/455908.html" } ] }, {}
                     ]
                 }
             }
