Add live show notice

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -289,7 +289,9 @@
                     <p>Find out more about the contents of this CD and its recording process on the dedicated show page.</p>
                     `,
                     releaseYear: 2012,
-                    playbackLength: "1:26:24*",
+                    live: true,
+                    playbackLength: "1:26:29*",
+                    starText: "*Combining both CD (1:14:00) and digital (1:21:03) tracks",
                     tracks:
                     [
                         { title: "Sonic Youth", playbackLength: "3:56", tags: [ 'live' ] },
@@ -381,6 +383,10 @@
                     <p class="statVal">67:34</p>
                 </li>
             </ul>
+            <p id="starText"></p>
+            <div class="liveNotice" id="liveNotice">
+                <p>This release uses audio from a live performance - visit the dedicated show page for more detailed info!</p>
+            </div>
         </div>
 
         <div class="description block">
