--- a/menus/credits.html
+++ b/menus/credits.html
@@ -42,16 +42,16 @@
                 <p>Text Editor</p>
             </div>
             <div class="credit">
+                <h2>Lia</h2>
+                <p>Programming Assistance, Tester</p>
+            </div>
+            <div class="credit">
                 <h2>marcosvargas97</h2>
                 <p>Coloring, General Typography</p>
             </div>
             <div class="credit">
                 <h2>RM05</h2>
                 <p>Image categorization</p>
-            </div>
-            <div class="credit">
-                <h2>Lia</h2>
-                <p>Tester</p>
             </div>
         </div>
 
