Add 2N2R + Add Sticker View

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -165,7 +165,7 @@
                     playbackLength: "1:25:53",
                     tracks:
                     [
-                        { title: "I Am... All Of Me", playbackLength: "3:51", tags: [ 'remix' ], description: "Crush 40's hit song, Live & Learn. This is the song's first album release." },
+                        { title: "I Am... All Of Me", playbackLength: "3:51", tags: [ 'remix' ] },
                         { title: "His World", playbackLength: "5:17", tags: [ 'remix' ] },
                         { title: "Un-gravitify", playbackLength: "4:45", tags: [ 'cover', 'first' ] },
                         { title: "All Hail Shadow", playbackLength: "4:02", tags: [ 'rerelease' ] },
@@ -221,7 +221,7 @@
                     bookletPageSourceExtension: '.jpg',
                     bookletPages:
                     [
-                        {backgrounds: { title: "Sozaijiten Vol. 8 Walls, SH050", link: "http://www.sozaijiten.com/cdrom/imagedetail.asp?pid=9&fid=99008050&i=49"}}, 
+                        {backgrounds: [ { title: "Sozaijiten Vol. 8 Walls, SH050", link: "http://www.sozaijiten.com/cdrom/imagedetail.asp?pid=9&fid=99008050&i=49"} ] }, 
                         {}, { }, {}, {}, {}, {}, {}, {}, {}, {}, {}
                     ]
                 },
@@ -362,6 +362,81 @@
                         { backgrounds: [ { title: "WaveMaster Inc. Photo", link: "https://www.inside-games.jp/article/img/2014/02/07/74153/455908.html" } ] }, 
                         { backgrounds: [ { title: "WaveMaster Inc. Photo", link: "https://www.inside-games.jp/article/img/2014/02/07/74153/455908.html" } ] }, {}
                     ]
+                },
+                twonights: {
+                    title: "2 Nights 2 Remember",
+                    description: `
+                    <p>2 Nights 2 Remember is unique in that it is both a studio EP and a live album. The first four tracks on the album are brand-new studio songs created specifically for the EP, while the rest of the album features professionally-recorded audio of their 2 Nights 2 Remember live performance, with their inclusion allowing the length of this album to be closer to others.</p>
+                    <p>The four new tracks: 2 Nights 2 Remember, Big Mouth, Light of the Day and Down & Dirty had been previously released in short versions, but this was their first proper release, and their intended final placement too. 2 Nights 2 Remember and Down & Dirty were both selected to be included in the live concert segment of the CD too.</p>
+                    <p>The 2 Nights 2 Remember live performances were at Live Stage Guilty, on March 29th 2014 and March 30th 2014. Once again, both shows were professionally recorded and put on the CD in exactly the same manner as Live!.</p>
+                    <p>Unfortunately, a significant amount of the concert was excluded from this release and all subsequent digital releases, as this was only really included to pad the remainder of the CD space, which could only fit half the concert. See the dedicated show page for more info about the recording and release of this concert.</p>
+                    `,
+                    releaseYear: 2015,
+                    live: true,
+                    playbackLength: "1:09:35",
+                    starText: "(The max a CD can hold is 1:14:00)",
+                    tracks:
+                    [
+                        { title: "2 Nights 2 Remember", playbackLength: "3:46", tags: [ 'first', 'original' ] },
+                        { title: "Big Mouth", playbackLength: "4:46", tags: [ 'first', 'original' ] },
+                        { title: "Light Of The Day", playbackLength: "4:32", tags: [ 'first', 'original' ] },
+                        { title: "Down & Dirty", playbackLength: "4:43", tags: [ 'first', 'original' ] },
+                        { title: "Dangerous Ground", playbackLength: "2:31", tags: [ 'live' ] },
+                        { title: "Into the Wind", playbackLength: "3:22", tags: [ 'live' ] },
+                        { title: "Free", playbackLength: "3:26", tags: [ 'live' ] },
+                        { title: "2 Nights 2 Remember", playbackLength: "3:43", tags: [ 'live' ], description: "A <i>live</i> performance of the track, as opposed to the studio track at the beginning." },
+                        { title: "Down & Dirty", playbackLength: "4:56", tags: [ 'live' ], description: "A <i>live</i> performance of the track, as opposed to the studio track at the beginning." },
+                        { title: "With Me", playbackLength: "2:38", tags: [ 'live' ] },
+                        { title: "Live Life", playbackLength: "5:53", tags: [ 'live' ] },
+                        { title: "Knight Of The Wind", playbackLength: "3:51", tags: [ 'live' ] },
+                        { title: "Watch Me Fly...", playbackLength: "5:18", tags: [ 'live' ] },
+                        { title: "Revvin' Up", playbackLength: "3:11", tags: [ 'live' ] },
+                        { title: "Never Turn Back", playbackLength: "4:19", tags: [ 'live' ] },
+                        { title: "Sonic Youth", playbackLength: "4:10", tags: [ 'live' ] },
+                        { title: "What I'm Made Of...", playbackLength: "4:30", tags: [ 'live' ] }
+                    ],
+                    physicalBg: "../img/visuals/Background/Discography/LiveStuff.png",
+                    discImg: "../img/content/discography/physical/2N2R/Disc.png",
+                    sticker: "../img/content/discography/physical/2N2R/Sticker.jpg",
+                    physicalCover: 
+                    {
+                        imgSrc: "../img/content/discography/2N2R.png",
+                        backgrounds: [ 
+                            { title: "Cut-out by Shoko Otsuka", link: "https://ameblo.jp/shokootsuka/entry-11858040940.html" },
+                            { title: "Cut-out by Shoko Otsuka", link: "https://ameblo.jp/shokootsuka/entry-11832475290.html" },
+                            { title: "Texture", link: "https://www.photos-public-domain.com/2011/11/29/light-brown-or-tan-paper-texture-with-flecks/" },
+                        ],
+                        fonts: [ { title: "BRIG", link: "https://www.behance.net/gallery/18876427/BRIG-free-typeface" } ]
+                    },
+                    obiFront:
+                    {
+                        imgSrc: "../img/content/discography/physical/2N2R/Obi.jpg",
+                        rightTranslation: `
+                            <p><i>To be filled in</i></p>
+                        `,
+                        middleTranslation: `
+                            <p><i>Crush 40 2 Nights 2 Remember</i></p>
+                        `,
+                        leftTranslation: `
+                            <p><i>CD tracklisting</i></p>
+                        `
+                    },
+                    physicalBack:
+                    {
+                        imgSrc: "../img/content/discography/physical/2N2R/Back.jpg",
+                        backgrounds: [ { title: "Texture", link: "https://www.photos-public-domain.com/2011/11/29/light-brown-or-tan-paper-texture-with-flecks/" }, ],
+                        fonts: [ { title: "BRIG", link: "https://www.behance.net/gallery/18876427/BRIG-free-typeface" } ]
+                    },
+                    physicalTray:
+                    {
+                        imgSrc: "../img/content/discography/physical/2N2R/Tray.jpg"
+                    },
+                    bookletPageSourcePrefix: '../img/content/discography/physical/2N2R/',
+                    bookletPageSourceExtension: '.jpg',
+                    bookletPages:
+                    [
+                        {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}
+                    ]
                 }
             }
         </script>
@@ -474,6 +549,11 @@
                         </div>
                     </div>
                     <img class="img" src="../img/content/discography/physical/SSS/Obi.png" data-action='zoom'>
+                </div>
+
+                <div id="sticker" class="coverings sticker">
+                    <h3 class="title">Sticker</h3>
+                    <img class="img coverImg" src="../img/Placeholder.png" data-action='zoom'>
                 </div>
 
                 <div id="tray" class="coverings tray">
